fixed some opacity

--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -59,7 +59,7 @@
             source: 'placeringer',
             maxzoom: 15,
             paint: {
-                "heatmap-opacity": 0.65,
+                "heatmap-opacity": 1,
                 'heatmap-radius': {
                     stops: [
                         [11, 3],
@@ -103,6 +103,7 @@
             source: 'placeringer',
             maxzoom: 15,
             'paint': {
+                'circle-opacity': 0,
                 'circle-radius': {
                     'base': 1.75,
                     'stops': [
