--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -272,8 +272,18 @@
             // Change the cursor style as a UI indicator.
             map.getCanvas().style.cursor = 'pointer';
 
+            let activities = {
+                'IN_VEHICLE': 'In car 🚗',
+                'ON_FOOT': 'On foot 🦶',
+                'NA': 'Not available 🚫',
+                'ON_BICYCLE': 'On bike 🚴',
+                'STILL': 'Still 😑',
+                'TILTING': 'Tilting 🤣',
+                'UNKNOWN': 'Unknown ❓'
+            }
+
             var coordinates = e.features[0].geometry.coordinates.slice();
-            var description = e.features[0].properties.activity;
+            var description = e.features[0].properties.date + "<br>" + activities[e.features[0].properties.activity];
 
             while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
                 coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
