--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -69,8 +69,8 @@
 
     </div>
     <div id="main">
-        <span style="font-size:30px;cursor:pointer;position:fixed;top:50%" onclick="openLeftControls()" id="leftSideButton">&#9776;</span>
-        <span style="font-size:30px;cursor:pointer;position:fixed;right:6px;top:50%" onclick="openRightControls()" id="rightSideButton">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer;position:fixed;top:50%;color:lightgray" onclick="openLeftControls()" id="leftSideButton">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer;position:fixed;right:6px;top:50%;color:lightgray" onclick="openRightControls()" id="rightSideButton">&#9776;</span>
     </div>
     <div id="map"></div>
     <script>
@@ -123,10 +123,23 @@
         map.on('load', function () {
             map.addSource('placeringer', {
                 type: 'geojson',
-                data: 'https://dl.dropbox.com/s/r5qlo2zgbyctxvp/placeringsoversigt_medium.geojson?dl=0'
+                // data: 'https://dl.dropbox.com/s/r5qlo2zgbyctxvp/placeringsoversigt_medium.geojson?dl=0'
+                data: 'data/placeringsoversigt_small.geojson'
             });
             map.addLayer(heatmap);
             map.addLayer(points);
+
+            // Open controls
+            openRightControls();
+            openLeftControls();
+
+            // Intialize piechart
+            var query = map.queryRenderedFeatures({
+                layers: ['place-point']
+            });
+            // var data = [10, 20, 100];
+            var data = getCounts(query);
+            createPieChart(data);
         });
 
         map.on('click', function () {
