--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -18,6 +18,8 @@
         <!-- separate files -->
     <script src="js/side_controls.js"></script>
     <script src="js/piechart.js"></script>
+    <script src="js/d3.legend.js"></script>
+
 
 </head>
 
@@ -69,8 +71,10 @@
 
     </div>
     <div id="main">
-        <span style="font-size:30px;cursor:pointer;position:fixed;top:50%;color:lightgray" onclick="openLeftControls()" id="leftSideButton">&#9776;</span>
-        <span style="font-size:30px;cursor:pointer;position:fixed;right:6px;top:50%;color:lightgray" onclick="openRightControls()" id="rightSideButton">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer;position:fixed;top:50%;color:lightgray" onclick="openLeftControls()"
+            id="leftSideButton">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer;position:fixed;right:6px;top:50%;color:lightgray" onclick="openRightControls()"
+            id="rightSideButton">&#9776;</span>
     </div>
     <div id="map"></div>
     <script>
